<resources>

    <string name="app_name">Basic Quiz</string>

    <string name="question_title">Question</string>
    <string name="cheat_title">Cheat</string>

    <string name="true_button_text">True</string>
    <string name="false_button_text">False</string>
    <string name="empty_text">\???</string>
    <string name="correct_text">Correct</string>
    <string name="incorrect_text">Incorrect</string>
    <string name="next_button_text">Next</string>
    <string name="cheat_button_text">Cheat</string>


    <string-array name="question_array">
        <item>Question #1: True</item>
        <item>Question #2: False</item>
        <item>Question #3: True</item>
    </string-array>

    <integer-array name="answer_array">
        <item>1</item>
        <item>0</item>
        <item>1</item>
    </integer-array>
</resources>
